--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
         <ul id="menu" class="shadow">
+	    <li>
+    		<a href="https://google.com" class="no-scroll">Google</a>
+	    </li>
             <li>
                 <a href="#about">About</a>
             </li>
