--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <div id="lead-content">
             <h1>Sachin Saligram</h1>
             <h2>Data Scientist | Data Engineer | Data Analyst</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="devportfolio/Sachin-Saligram-Resume.pdf" class="btn-rounded-white">Download Resume</a>
+	    <a href="devportfolio/Sachin-Saligram-Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
