--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
         <ul id="menu" class="shadow">
-	    <li>
-    		<a href="https://google.com" class="no-scroll">Google</a>
-	    </li>
             <li>
                 <a href="#about">About</a>
             </li>
@@ -53,8 +50,8 @@
         <div id="lead-content">
             <h1>Sachin Saligram</h1>
             <h2>Data Scientist | Data Engineer | Data Analyst</h2>
-            <a href="devportfolio/Sachin-Saligram-Resume.pdf" class="btn-rounded-white">Download Resume</a>
-	    <a href="devportfolio/Sachin-Saligram-Resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram-Resume.pdf" class="btn-rounded-white">Download Resume</a>
+	    <a href="https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram.pdf" class="btn-rounded-white">Download Summary</a>
         </div>
         <!-- End #lead-content -->
 
