--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div id="lead-content">
             <h1>Sachin Saligram</h1>
             <h2>Data Scientist | Data Engineer | Data Analyst</h2>
-            <a href="https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram-Resume.pdf" class="btn-rounded-white">Download Resume</a>
-	    <a href="https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram.pdf" class="btn-rounded-white">Download Summary</a>
+            <a href="https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram-Resume.pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
+	    <a href="https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram.pdf" target="_blank" class="btn-rounded-white">Download Summary</a>
         </div>
         <!-- End #lead-content -->
 
