--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                     </p>
 			<p>
 			<ul>
-					<li>* Data related work experience? Yes!</li>
-					<li>* Experience with SQL, Python and R? Yes!</li>
-					<li>* Experience in Business Analytics? Yes!</li>
-					<li>* Machine Learning projects? Yes!</li>
-					<li>* Data storyteller? Yup!</li>
-					<li>* Dreamer? Totally!</li>
+					<li>Data related work experience? Yes!</li>
+					<li>Experience with SQL, Python and R? Yes!</li>
+					<li>Experience in Business Analytics? Yes!</li>
+					<li>Machine Learning projects? Yes!</li>
+					<li>Data storyteller? Yup!</li>
+					<li>Dreamer? Yeah!</li>
 			</ul>
 			</p>
                 </div>
