--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <h1>Sachin Saligram</h1>
             <h2>Data Scientist | Data Engineer | Data Analyst</h2>
 		
+	    <a target='_blank' href={require('https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram.pdf')} class="btn-rounded-white">PDF Doc</a>
             <a <embed src="https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram.pdf" type="application/pdf" />Download Resume</a>
 	    <a href="https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram.pdf" target="_blank" class="btn-rounded-white">Download Summary</a>
         </div>
