--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
         <div id="lead-content">
             <h1>Sachin Saligram</h1>
             <h2>Data Scientist | Data Engineer | Data Analyst</h2>
-		
-	    <a target='_blank' href={require('devportfolio/Sachin-Saligram.pdf')} class="btn-rounded-white">PDF Doc</a>
-            <a <embed src="https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram.pdf" type="application/pdf" />Download Resume</a>
-	    <a href="https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram.pdf" target="_blank" class="btn-rounded-white">Download Summary</a>
+	    <a href="https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram.pdf" download="Sachin-Saligram-Summary.pdf" class="btn-rounded-white">Download Summary</a>
+		<a href="https://github.com/SachinSaligram/devportfolio/blob/gh-pages/Sachin-Saligram-Resume.pdf" download="Sachin-Saligram-Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
