--- a/index.html
+++ b/index.html
@@ -149,31 +149,39 @@
 
     <div id="education">
         <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+	 <div class="education-block">
+            <h3>North Carolina State University</h3>
+            <span class="education-date">August 2016 - Present</span>
+            <h4>Masters in Computer Science</h4>
+            <ul>
+                <li>
+                    I am a Graduate Research Assitant under Dr. Nagiza Samatova. Completing my final semester with 
+			a course titled 'Enterprise Storage Architecture'.
+                </li>
+                <li>
+                    Graduating in May 2018 with specialization in Data Science.
+                </li>
+                <li>
+			<h4>Coursework:</h4>
+		    <li>Algorithms for Data-Guided Business Intelligence</li>
+		    <li>Data Intensive Computing</li>
+		    <li>Software Engineering</li>
+		    <li>Automated Learning for Data Analysis</li>
+		    <li>Enterprise Storage Architecture</li>
+		    <li>Database Management Concepts and Systems</li>
+                </li>
+            </ul>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
+            <h3>Bangalore Institute of Technology</h3>
+            <span class="education-date">August 2010 - June 2014</span>
+            <h4>Bachelor of Engineering in Telecommunications</h4>
+            <p>
+                During my four years of undergraduate study, I completed an internship at Sun Edison (MEMC) and implemented 
+		    two projects, Advanced Encryption Standard (AES) and Secure Hash Algorithm (SHA-512), under Dr. Ananda Mohan.
+            </p>
         </div>
         <!-- End .education-block -->
     </div>
